Documentation outline for centinel.
Change-Id: If9508f58cb1fe5a37cc13fedf0df77025a393e8a
Signed-off-by: amandeep <rattenpal.amandeep@tcs.com>

--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -68,6 +68,8 @@ include::packetcable/packetcable-user.adoc[PacketCable PCMM - CMTS Management]
 
 include::sfc/sfc.adoc[Service Function Chain]
 
+include::centinel/centinel.adoc[]
+
 include::snmp/snmp-user-guide.adoc[SNMP]
 
 include::sxp/odl-sxp-user.adoc[]
