--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -121,6 +121,8 @@ include::yangtools/yangtools.adoc[]
 
 include::yang-push/odl-yang-push-dev.adoc[YANG-PUSH]
 
+include::snbi/odl-snbi-dev.adoc[SNBI]
+
 :numbered!:
 
 ///////
