--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -87,3 +87,5 @@ include::vtn/vtn-user.adoc[]
 include::controller/netconf/odl-netconf-user.adoc[]
 
 include::yang-push/odl-yang-push-user.adoc[YANG-PUSH]
+
+include::snbi/odl-snbi-user.adoc[SNBI]
