--- a/manuals/user-guide/src/main/asciidoc/bgpcep/odl-bgpcep-bgp-all-user.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bgpcep/odl-bgpcep-bgp-all-user.adoc
@@ -364,7 +364,7 @@ and *peer-role* (if necessary).
  </advertized-table>
  <advertized-table xmlns="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">
   <type xmlns:x="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">x:bgp-table-type</type>
-  <name>flowspec</name>
+  <name>ipv4-flowspec</name>
  </advertized-table>
 </module>
 ----
@@ -400,8 +400,6 @@ BGP Best Path Selection algorithm.
 ==== Viewing BGP Topology ====
 
 This section summarizes how data from BGP can be viewed through RESTCONF. Currently it is the only way to view the data.
-
-IMPORTANT: From Helium release the port changed from 8080 to 8181.
 
 ===== Network Topology View =====
 
@@ -458,29 +456,79 @@ There are multiple RIBs configured:
 - LocRib (per RIB) : Local RIB, BGP routes from all peers
 - AdjRibsOut (per Peer) : BGP routes that will be advertizes, after applying Export policies
 
-This is how the output looks like, when address families for IPv4 and Linkstate were configured:
+his is how the empty output looks like, when address families for IPv4 Unicast, IPv6 Unicast, IPv4 Flowspec, IPv6 Flowspec, IPv4 Labeled Unicast and Linkstate were configured: 
 
 [source,xml]
 ----
-<loc-rib>
- <tables>
-  </attributes>
-  <safi>x:linkstate-subsequent-address-family</safi>
-  <afi>x:linkstate-address-family</afi>
-  </linkstate-routes>
- </tables>
- <tables>
-  </attributes>
-  <safi>x:unicast-subsequent-address-family</safi>
-  <afi>x:ipv4-address-family</afi>
-  </ipv4-routes>
- </tables>
+<loc-rib xmlns="urn:opendaylight:params:xml:ns:yang:bgp-rib">
+  <tables>
+    <afi xmlns:x="urn:opendaylight:params:xml:ns:yang:bgp-types">x:ipv6-address-family</afi>
+    <safi xmlns:x="urn:opendaylight:params:xml:ns:yang:bgp-types">x:unicast-subsequent-address-family</safi>
+    <attributes>
+      <uptodate>false</uptodate>
+    </attributes>
+    <ipv6-routes xmlns="urn:opendaylight:params:xml:ns:yang:bgp-inet">
+    </ipv6-routes>
+  </tables>
+  <tables>
+    <afi xmlns:x="urn:opendaylight:params:xml:ns:yang:bgp-types">x:ipv4-address-family</afi>
+    <safi xmlns:x="urn:opendaylight:params:xml:ns:yang:bgp-types">x:unicast-subsequent-address-family</safi>
+    <attributes>
+      <uptodate>false</uptodate>
+    </attributes>
+    <ipv4-routes xmlns="urn:opendaylight:params:xml:ns:yang:bgp-inet">
+    </ipv4-routes>
+  </tables>
+  <tables>
+    <afi xmlns:x="urn:opendaylight:params:xml:ns:yang:bgp-types">x:ipv4-address-family</afi>
+    <safi xmlns:x="urn:opendaylight:params:xml:ns:yang:bgp-flowspec">x:flowspec-subsequent-address-family</safi>
+    <attributes>
+      <uptodate>false</uptodate>
+    </attributes>
+    <flowspec-routes xmlns="urn:opendaylight:params:xml:ns:yang:bgp-flowspec">
+    </flowspec-routes>
+  </tables>
+  <tables>
+    <afi xmlns:x="urn:opendaylight:params:xml:ns:yang:bgp-types">x:ipv6-address-family</afi>
+    <safi xmlns:x="urn:opendaylight:params:xml:ns:yang:bgp-flowspec">x:flowspec-subsequent-address-family</safi>
+    <attributes>
+      <uptodate>false</uptodate>
+    </attributes>
+    <flowspec-ipv6-routes xmlns="urn:opendaylight:params:xml:ns:yang:bgp-flowspec">
+    </flowspec-ipv6-routes>
+  </tables>
+  <tables>
+    <afi xmlns:x="urn:opendaylight:params:xml:ns:yang:bgp-types">x:ipv4-address-family</afi>
+    <safi xmlns:x="urn:opendaylight:params:xml:ns:yang:bgp-labeled-unicast">x:labeled-unicast-subsequent-address-family</safi>
+    <attributes>
+      <uptodate>false</uptodate>
+    </attributes>
+    <labeled-unicast-routes xmlns="urn:opendaylight:params:xml:ns:yang:bgp-labeled-unicast">
+    </labeled-unicast-routes>
+  </tables>
+  <tables>
+    <afi xmlns:x="urn:opendaylight:params:xml:ns:yang:bgp-linkstate">x:linkstate-address-family</afi>
+    <safi xmlns:x="urn:opendaylight:params:xml:ns:yang:bgp-linkstate">x:linkstate-subsequent-address-family</safi>
+    <attributes>
+      <uptodate>false</uptodate>
+    </attributes>
+    <linkstate-routes xmlns="urn:opendaylight:params:xml:ns:yang:bgp-linkstate">
+    </linkstate-routes>
+  </tables>
 </loc-rib>
 ----
 
 You can see details for each AFI by expanding the RESTCONF link:
 
-*IPv4* : http://localhost:8181/restconf/operational/bgp-rib:bgp-rib/rib/example-bgp-rib/loc-rib/tables/bgp-types:ipv4-address-family/bgp-types:unicast-subsequent-address-family/ipv4-routes
+*IPv4 Unicast* : http://localhost:8181/restconf/operational/bgp-rib:bgp-rib/rib/example-bgp-rib/loc-rib/tables/bgp-types:ipv4-address-family/bgp-types:unicast-subsequent-address-family/ipv4-routes
+
+*IPv6 Unicast* : http://localhost:8181/restconf/operational/bgp-rib:bgp-rib/rib/example-bgp-rib/loc-rib/tables/bgp-types:ipv6-address-family/bgp-types:unicast-subsequent-address-family/ipv6-routes
+
+*IPv4 Labeled Unicast* : http://localhost:8181/restconf/operational/bgp-rib:bgp-rib/rib/example-bgp-rib/loc-rib/tables/bgp-types:ipv4-address-family/bgp-labeled-unicast:labeled-unicast-subsequent-address-family/bgp-labeled-unicast:labeled-unicast-routes
+
+*IPv4 Flowspec* : http://localhost:8181/restconf/operational/bgp-rib:bgp-rib/rib/example-bgp-rib/loc-rib/tables/bgp-types:ipv4-address-family/bgp-flowspec:flowspec-subsequent-address-family/bgp-flowspec:flowspec-routes
+
+*IPv6 Flowspec* : http://localhost:8181/restconf/operational/bgp-rib:bgp-rib/rib/example-bgp-rib/loc-rib/tables/bgp-types:ipv6-address-family/bgp-flowspec:flowspec-subsequent-address-family/bgp-flowspec:flowspec-ipv6-routes
 
 *Linkstate* : http://localhost:8181/restconf/operational/bgp-rib:bgp-rib/rib/example-bgp-rib/loc-rib/tables/bgp-linkstate:linkstate-address-family/bgp-linkstate:linkstate-subsequent-address-family/linkstate-routes
 
@@ -488,42 +536,353 @@ You can see details for each AFI by expanding the RESTCONF link:
 
 If your peer is configured, you can populate the RIB by making following POST call to RESTCONF:
 
-*URL:* http://localhost:8181/restconf/config/bgp-rib:application-rib/example-app-rib/tables/bgp-types:ipv4-address-family/bgp-types:unicast-subsequent-address-family/
+===== IPv4 Unicast =====
+
+*Add route:*
+
+*URL:*  http://localhost:8181/restconf/config/bgp-rib:application-rib/example-app-rib/tables/bgp-types:ipv4-address-family/bgp-types:unicast-subsequent-address-family/bgp-inet:ipv4-routes/
 
 - where example-app-rib is your application RIB id (that you specified in the configuration) and tables specifies AFI and SAFI of the data that you want to add.
 
-*POST:*
+*Method:* POST
 
 *Content-Type:* application/xml
 
 [source,xml]
 ----
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<ipv4-routes xmlns="urn:opendaylight:params:xml:ns:yang:bgp-inet">
- <ipv4-route>
-  <prefix>200.20.160.1/32</prefix>
-  <attributes>
-   <ipv4-next-hop>
-    <global>199.20.160.41</global>
-   </ipv4-next-hop><as-path/>
-   <multi-exit-disc>
-    <med>0</med>
-   </multi-exit-disc>
-   <local-pref>
-    <pref>100</pref>
-   </local-pref>
-   <originator-id>
-    <originator>41.41.41.41</originator>
-   </originator-id>
-   <origin>
-    <value>igp</value>
-   </origin>
-   <cluster-id>
-    <cluster>40.40.40.40</cluster>
-   </cluster-id>
-  </attributes>
- </ipv4-route>
-</ipv4-routes>
+ <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+  <ipv4-route xmlns="urn:opendaylight:params:xml:ns:yang:bgp-inet">
+   <prefix>1.1.1.1/32</prefix>
+   <attributes>
+    <ipv4-next-hop>
+     <global>199.20.160.41</global>
+    </ipv4-next-hop><as-path/>
+    <multi-exit-disc>
+     <med>0</med>
+    </multi-exit-disc>
+    <local-pref>
+     <pref>100</pref>
+    </local-pref>
+    <originator-id>
+     <originator>41.41.41.41</originator>
+    </originator-id>
+    <origin>
+     <value>igp</value>
+    </origin>
+    <cluster-id>
+     <cluster>40.40.40.40</cluster>
+    </cluster-id>
+   </attributes>
+  </ipv4-route>
 ----
 
 The request results in *204 No content*. This is expected.
+
+*Delete route:*
+
+*URL:*  http://localhost:8181/restconf/config/bgp-rib:application-rib/example-app-rib/tables/bgp-types:ipv4-address-family/bgp-types:unicast-subsequent-address-family/bgp-inet:ipv4-routes/bgp-inet:ipv4-route/<route-id>
+
+*Method:* DELETE
+
+===== IPv6 Unicast =====
+
+*Add route:*
+
+*URL:* http://localhost:8181/restconf/config/bgp-rib:application-rib/example-app-rib/tables/bgp-types:ipv6-address-family/bgp-types:unicast-subsequent-address-family/bgp-inet:ipv6-routes/
+
+*Method:* POST
+
+*Content-Type:* application/xml
+
+[source,xml]
+----
+  <ipv6-route xmlns="urn:opendaylight:params:xml:ns:yang:bgp-inet">
+   <prefix>2001:db8:30::3/128</prefix>
+   <attributes>
+    <ipv6-next-hop>
+     <global>2001:db8:1::6</global>
+    </ipv6-next-hop>
+    <as-path/>
+    <origin>
+     <value>egp</value>
+    </origin>
+   </attributes>
+  </ipv6-route>
+----
+
+The request results in *204 No content*. This is expected.
+
+*Delete route:*
+
+*URL:*  http://localhost:8181/restconf/config/bgp-rib:application-rib/example-app-rib/tables/bgp-types:ipv6-address-family/bgp-types:unicast-subsequent-address-family/bgp-inet:ipv6-routes/bgp-inet:ipv6-route/<route-id>
+
+*Method:* DELETE
+
+===== IPv4 Labeled Unicast =====
+
+*Add route:*
+
+*URL:* http://localhost:8181/restconf/config/bgp-rib:application-rib/example-app-rib/tables/bgp-types:ipv4-address-family/bgp-labeled-unicast:labeled-unicast-subsequent-address-family/bgp-labeled-unicast:labeled-unicast-routes
+
+*Method:* POST
+
+*Content-Type:* application/xml
+
+[source,xml]
+----
+  <labeled-unicast-route xmlns="urn:opendaylight:params:xml:ns:yang:bgp-labeled-unicast">
+   <route-key>label1</route-key>
+   <prefix>1.1.1.1/32</prefix>
+   <label-stack>
+    <label-value>123</label-value>
+   </label-stack>
+   <label-stack>
+    <label-value>456</label-value>
+   </label-stack>
+   <label-stack>
+    <label-value>342</label-value>
+   </label-stack>
+   <attributes>
+    <ipv4-next-hop>
+     <global>199.20.160.41</global>
+    </ipv4-next-hop>
+    <origin>
+     <value>igp</value>
+    </origin>
+    <as-path/>
+    <local-pref>
+     <pref>100</pref>
+    </local-pref>
+   </attributes>
+  </labeled-unicast-route>
+----
+
+The request results in *204 No content*. This is expected.
+
+*Delete route:*
+
+*URL:*  http://localhost:8181/restconf/config/bgp-rib:application-rib/example-app-rib/tables/bgp-types:ipv4-address-family/bgp-labeled-unicast:labeled-unicast-subsequent-address-family/bgp-labeled-unicast:labeled-unicast-routes/bgp-labeled-unicast:labeled-unicast-route/<route-id>
+
+*Method:* DELETE
+
+===== IPv4 Flowspec =====
+
+*Add route:*
+
+*URL:* http://localhost:8181/restconf/config/bgp-rib:application-rib/example-app-rib/tables/bgp-types:ipv4-address-family/bgp-flowspec:flowspec-subsequent-address-family/bgp-flowspec:flowspec-routes
+
+*Method:* POST
+
+*Content-Type:* application/xml
+
+[source,xml]
+----
+<flowspec-route xmlns="urn:opendaylight:params:xml:ns:yang:bgp-flowspec">
+  <route-key>flow1</route-key>
+  <flowspec>
+    <destination-prefix>192.168.0.1/32</destination-prefix>
+  </flowspec>
+  <flowspec>
+    <source-prefix>10.0.0.1/32</source-prefix>
+  </flowspec>
+  <flowspec>
+    <protocol-ips>
+      <op>equals end-of-list</op>
+      <value>6</value>
+    </protocol-ips>
+  </flowspec>
+  <flowspec>
+    <ports>
+      <op>equals end-of-list</op>
+      <value>80</value>
+    </ports>
+  </flowspec>
+  <flowspec>
+    <destination-ports>
+      <op>greater-than</op>
+      <value>8080</value>
+    </destination-ports>
+    <destination-ports>
+      <op>and-bit less-than end-of-list</op>
+      <value>8088</value>
+    </destination-ports>
+  </flowspec>
+  <flowspec>
+    <source-ports>
+      <op>greater-than end-of-list</op>
+      <value>1024</value>
+    </source-ports>
+  </flowspec>
+  <flowspec>
+    <types>
+      <op>equals end-of-list</op>
+      <value>0</value>
+    </types>
+  </flowspec>
+  <flowspec>
+    <codes>
+      <op>equals end-of-list</op>
+      <value>0</value>
+    </codes>
+  </flowspec>
+  <flowspec>
+    <tcp-flags>
+      <op>match end-of-list</op>
+      <value>32</value>
+    </tcp-flags>
+  </flowspec>
+  <flowspec>
+    <packet-lengths>
+      <op>greater-than</op>
+      <value>400</value>
+    </packet-lengths>
+    <packet-lengths>
+      <op>and-bit less-than end-of-list</op>
+       <value>500</value>
+    </packet-lengths>
+  </flowspec>
+  <flowspec>
+    <dscps>
+      <op>equals end-of-list</op>
+      <value>20</value>
+    </dscps>
+  </flowspec>
+  <flowspec>
+    <fragments>
+      <op>match end-of-list</op>
+      <value>first</value>
+    </fragments>
+  </flowspec>
+  <attributes>
+    <origin>
+      <value>igp</value>
+    </origin>
+    <as-path/>
+    <local-pref>
+      <pref>100</pref>
+    </local-pref>
+    <extended-communities>
+    ....
+    </extended-communities>
+  </attributes>
+</flowspec-route>
+----
+
+*Flowspec Extended Communities (Actions):*
+
+[source,xml]
+----
+  <extended-communities>
+    <transitive>true</transitive>
+    <traffic-rate-extended-community>
+      <informative-as>123</informative-as>
+      <local-administrator>AAAAAA==</local-administrator>
+    </traffic-rate-extended-community>
+  </extended-communities>
+
+  <extended-communities>
+    <transitive>true</transitive>
+    <traffic-action-extended-community>
+      <sample>true</sample>
+      <terminal-action>false</terminal-action>
+    </traffic-action-extended-community>
+  </extended-communities>
+
+  <extended-communities>
+    <transitive>true</transitive>
+    <redirect-extended-community>
+      <global-administrator>123</global-administrator>
+      <local-administrator>AAAAew==</local-administrator>
+    </redirect-extended-community>
+  </extended-communities>
+
+  <extended-communities>
+    <transitive>true</transitive>
+    <redirect-ipv4>
+      <global-administrator>192.168.0.1</global-administrator>
+      <local-administrator>12345</local-administrator>
+    </redirect-ipv4>
+  </extended-communities>
+
+  <extended-communities>
+    <transitive>true</transitive>
+    <redirect-as4>
+      <global-administrator>64495</global-administrator>
+      <local-administrator>12345</local-administrator>
+    </redirect-as4>
+  </extended-communities>
+
+  <extended-communities>
+    <transitive>true</transitive>
+    <redirect-ip-nh-extended-community>
+      <copy>false</false>
+    </redirect-ip-nh-extended-community>
+  </extended-communities>
+
+  <extended-communities>
+    <transitive>true</transitive>
+    <traffic-marking-extended-community>
+      <global-administrator>20</global-administrator>
+    </traffic-marking-extended-community>
+  </extended-communities>
+----
+
+The request results in *204 No content*. This is expected.
+
+*Delete route:*
+
+*URL:* http://localhost:8181/restconf/config/bgp-rib:application-rib/example-app-rib/tables/bgp-types:ipv4-address-family/bgp-flowspec:flowspec-subsequent-address-family/bgp-flowspec:flowspec-routes/bgp-flowspec:flowspec-route/<route-id>
+
+*Method:* DELETE
+
+===== IPv6 Flowspec =====
+
+*Add route:*
+
+*URL:* http://localhost:8181/restconf/config/bgp-rib:application-rib/example-app-rib/tables/bgp-types:ipv6-address-family/bgp-flowspec:flowspec-subsequent-address-family/bgp-flowspec:flowspec-ipv6-routes
+
+*Method:* POST
+
+*Content-Type:* application/xml
+
+[source,xml]
+----
+<flowspec-route xmlns="urn:opendaylight:params:xml:ns:yang:bgp-flowspec">
+  <route-key>flow-v6</route-key>
+  <flowspec>
+    <destination-prefix>2001:db8:30::3/128</destination-prefix>
+  </flowspec>
+  <flowspec>
+    <source-prefix>2001:db8:31::3/128</source-prefix>
+  </flowspec>
+  <flowspec>
+    <flow-label>
+      <op>equals end-of-list</op>
+      <value>1</value>
+    </flow-label>
+  </flowspec>
+  <attributes>
+    <extended-communities>
+      <redirect-ipv6>
+        <global-administrator>2001:db8:1::6</global-administrator>
+        <local-administrator>12345</local-administrator>
+      </redirect-ipv6>
+    </extended-communities>
+    <origin>
+      <value>igp</value>
+    </origin>
+    <as-path/>
+    <local-pref>
+      <pref>100</pref>
+    </local-pref>
+  </attributes>
+</flowspec-route>
+----
+
+The request results in *204 No content*. This is expected.
+
+*Delete route:*
+
+*URL:* http://localhost:8181/restconf/config/bgp-rib:application-rib/example-app-rib/tables/bgp-types:ipv6-address-family/bgp-flowspec:flowspec-subsequent-address-family/bgp-flowspec:flowspec-ipv6-routes/bgp-flowspec:flowspec-route/<route-id>
+
+*Method:* DELETE
